<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".view.MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txtTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="48dp"
                android:layout_marginEnd="16dp"
                android:text="@string/txt_title"
                android:textAlignment="center"
                android:textSize="24sp"
                android:textStyle="bold" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:contentDescription="@string/txt_button_image"
                android:src="@mipmap/ic_launcher_round"
                tools:ignore="ImageContrastCheck" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center">

                <EditText
                    android:id="@+id/editEta"
                    android:layout_width="130dp"
                    android:layout_height="48dp"
                    android:layout_marginHorizontal="16dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="48dp"
                    android:ems="10"
                    android:hint="@string/txt_hint_edit_eta"
                    android:importantForAutofill="no"
                    android:inputType="numberDecimal"
                    android:textColorHint="@color/text_colorBlack"
                    android:textSize="15sp"
                    tools:ignore="VisualLintTextFieldSize,TouchTargetSizeCheck"
                    tools:layout_editor_absoluteX="17dp" />

                <EditText
                    android:id="@+id/editGas"
                    android:layout_width="130dp"
                    android:layout_height="48dp"
                    android:layout_marginHorizontal="16dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="16dp"
                    android:ems="10"
                    android:hint="@string/txt_hint_edit_gas"
                    android:importantForAutofill="no"
                    android:inputType="numberDecimal"
                    android:textColorHint="@color/text_colorBlack"
                    android:textSize="15sp"
                    tools:ignore="VisualLintTextFieldSize,TouchTargetSizeCheck" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical">

                <Button
                    android:id="@+id/buttonCalc"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="40dp"
                    android:layout_marginRight="16dp"
                    android:layout_marginBottom="20dp"
                    android:background="@color/corButton"
                    android:text="@string/txt_button_calc"
                    tools:ignore="VisualLintButtonSize" />

            </LinearLayout>

            <TextView
                android:id="@+id/txtResult"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:layout_marginStart="16dp"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="30dp"
                android:text="@string/txtResult"
                android:textSize="20sp"
                android:textStyle="bold"
                tools:ignore="HardcodedText" />

            <Button
                android:id="@+id/buttonClean"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginBottom="32dp"
                android:background="@color/corButton"
                android:text="@string/txt_button_clean"
                tools:ignore="VisualLintButtonSize" />

            <Button
                android:id="@+id/buttonSave"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:layout_marginBottom="32dp"
                android:background="@color/corButton"
                android:enabled="false"
                android:text="@string/txt_button_save"
                tools:ignore="VisualLintButtonSize" />


            <Button
                android:id="@+id/buttonFinish"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:layout_marginStart="16dp"
                android:background="@color/corButton"
                android:text="@string/txt_button_finish"
                tools:ignore="VisualLintButtonSize" />

        </LinearLayout>
    </ScrollView>
</androidx.appcompat.widget.LinearLayoutCompat>